--- a/greetings-date-clock.html
+++ b/greetings-date-clock.html
@@ -40,7 +40,8 @@ h1 {
 .card {
     padding: 10px 25px 10px 25px;
     border-radius: 10px;
-    background: #553c4e;
+    background: #EBA5FF;
+   
     width: 85vw;
     color: #fff;
     display: inline-block;
